# AlgorytmySortowanie

./: CMakeLists.txt  Sorting.hpp  main.cpp
src/: CMakeLists.txt  Quicksort.hpp
test/: CMakeLists.txt
